Created test for invalid arguments lenght in the input. Updated the area class to include busy coordinates